--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -2,87 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e76557ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from openpyxl import load_workbook\n",
+    "import xlwings as xw\n",
     "\n",
-    "# Load the Excel workbook\n",
-    "workbook = load_workbook('your_workbook.xlsx')\n",
+    "# Connect to the Excel application\n",
+    "wb = xw.Book('sam.xlsx')  # Replace 'your_file.xlsx' with the path to your Excel file\n",
     "\n",
-    "# Initialize lists to store the summary data\n",
-    "sheet_names = []\n",
-    "high_totals = []\n",
-    "low_totals = []\n",
-    "total_totals = []\n",
+    "# Access the Sheet1\n",
+    "sheet1 = wb.sheets['Sheet1']\n",
     "\n",
-    "# Iterate over each sheet in the workbook\n",
-    "for sheet_name in workbook.sheetnames:\n",
-    "    sheet = workbook[sheet_name]\n",
-    "    \n",
-    "    # Get the data range\n",
-    "    data_range = sheet.iter_rows(min_row=3, values_only=True)\n",
-    "    \n",
-    "    # Initialize totals for this sheet\n",
-    "    high_total = 0\n",
-    "    low_total = 0\n",
-    "    total_total = 0\n",
-    "    \n",
-    "    # Iterate over the rows in the sheet\n",
-    "    for row in data_range:\n",
-    "        # Sum all values in the row starting from the second column (index 1)\n",
-    "        high_value = row[1]\n",
-    "        low_value = row[2]\n",
-    "        total_value = row[3]\n",
-    "        \n",
-    "        if isinstance(high_value, str):\n",
-    "            try:\n",
-    "                high_value = int(high_value)\n",
-    "            except ValueError:\n",
-    "                high_value = 0\n",
-    "        \n",
-    "        if isinstance(low_value, str):\n",
-    "            try:\n",
-    "                low_value = int(low_value)\n",
-    "            except ValueError:\n",
-    "                low_value = 0\n",
-    "        \n",
-    "        if isinstance(total_value, str):\n",
-    "            try:\n",
-    "                total_value = int(total_value)\n",
-    "            except ValueError:\n",
-    "                total_value = 0\n",
-    "        \n",
-    "        high_total += high_value\n",
-    "        low_total += low_value\n",
-    "        total_total += total_value\n",
-    "    \n",
-    "    # Append data for this sheet to the lists\n",
-    "    sheet_names.append(sheet_name)\n",
-    "    high_totals.append(high_total)\n",
-    "    low_totals.append(low_total)\n",
-    "    total_totals.append(total_total)\n",
+    "# Get the range of visible cells (including headers)\n",
+    "visible_range = sheet1.api.UsedRange.SpecialCells(12).Address  # 12 represents xlCellTypeVisible\n",
     "\n",
-    "# Create the summary DataFrame\n",
-    "summary_df = pd.DataFrame({\n",
-    "    'SheetName': sheet_names,\n",
-    "    'HighTotal': high_totals,\n",
-    "    'LowTotal': low_totals,\n",
-    "    'TotalTotal': total_totals\n",
-    "})\n",
+    "# Copy the visible range\n",
+    "sheet1.range(visible_range).copy()\n",
     "\n",
-    "# Calculate the grand totals\n",
-    "grand_totals = summary_df[['HighTotal', 'LowTotal', 'TotalTotal']].sum()\n",
-    "grand_totals['SheetName'] = 'Grand Total'\n",
+    "# Access Sheet3 and paste the copied data\n",
+    "sheet3 = wb.sheets['Sheet3']\n",
+    "sheet3.range('A1').paste()\n",
     "\n",
-    "# Append the grand totals to the summary DataFrame\n",
-    "summary_df = summary_df.append(grand_totals, ignore_index=True)\n",
+    "# Save the workbook\n",
+    "wb.save()\n",
     "\n",
-    "# Save it in a df\n",
-    "print(summary_df)\n"
+    "# Close the workbook\n",
+    "wb.close()\n"
    ]
   },
   {
