--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -10,20 +10,25 @@
     "import xlwings as xw\n",
     "\n",
     "# Connect to the Excel application\n",
-    "wb = xw.Book('sam.xlsx')  # Replace 'your_file.xlsx' with the path to your Excel file\n",
+    "wb = xw.Book('your_file.xlsx')  # Replace 'your_file.xlsx' with the path to your Excel file\n",
     "\n",
     "# Access the Sheet1\n",
     "sheet1 = wb.sheets['Sheet1']\n",
     "\n",
-    "# Get the range of visible cells (including headers)\n",
-    "visible_range = sheet1.api.UsedRange.SpecialCells(12).Address  # 12 represents xlCellTypeVisible\n",
-    "\n",
-    "# Copy the visible range\n",
-    "sheet1.range(visible_range).copy()\n",
-    "\n",
-    "# Access Sheet3 and paste the copied data\n",
+    "# Access Sheet3 and clear existing content\n",
     "sheet3 = wb.sheets['Sheet3']\n",
-    "sheet3.range('A1').paste()\n",
+    "sheet3.clear()\n",
+    "\n",
+    "# Copy visible rows from Sheet1 to Sheet3\n",
+    "row_index = 1  # Start from the first row in Sheet3\n",
+    "for row in range(1, sheet1.api.Rows.Count + 1):  # Loop through all rows in Sheet1\n",
+    "    if not sheet1.api.Rows(row).Hidden:  # Check if the row is visible\n",
+    "        sheet1.api.Rows(row).Copy()  # Copy the entire row\n",
+    "        sheet3.range(f'A{row_index}').paste()  # Paste it into Sheet3\n",
+    "        row_index += 1  # Move to the next row in Sheet3\n",
+    "\n",
+    "# Clear the clipboard\n",
+    "xw.apps.active.api.CutCopyMode = False\n",
     "\n",
     "# Save the workbook\n",
     "wb.save()\n",
