--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -7,34 +7,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xlwings as xw\n",
+    "import os\n",
+    "import shutil\n",
+    "from openpyxl import load_workbook\n",
     "\n",
-    "# Connect to the Excel application\n",
-    "wb = xw.Book('your_file.xlsx')  # Replace 'your_file.xlsx' with the path to your Excel file\n",
+    "# Function to copy sheets from source workbook to target workbook\n",
+    "def copy_sheets(source_wb, target_wb, sheet_names):\n",
+    "    for sheet_name in sheet_names:\n",
+    "        source_sheet = source_wb[sheet_name]\n",
+    "        target_sheet = target_wb.create_sheet(sheet_name)\n",
+    "        for row in source_sheet.iter_rows(values_only=True):\n",
+    "            target_sheet.append(row)\n",
     "\n",
-    "# Access the Sheet1\n",
-    "sheet1 = wb.sheets['Sheet1']\n",
+    "# Define source workbook and target directory\n",
+    "source_file = 'source_workbook.xlsx'\n",
+    "target_directory = 'target_directory'\n",
     "\n",
-    "# Access Sheet3 and clear existing content\n",
-    "sheet3 = wb.sheets['Sheet3']\n",
-    "sheet3.clear()\n",
+    "# List of common sheet names to be kept in all workbooks\n",
+    "common_sheet_names = ['Sheet1', 'Sheet2', 'Sheet3', 'Sheet4', 'Sheet5']\n",
     "\n",
-    "# Copy visible rows from Sheet1 to Sheet3\n",
-    "row_index = 1  # Start from the first row in Sheet3\n",
-    "for row in range(1, sheet1.api.Rows.Count + 1):  # Loop through all rows in Sheet1\n",
-    "    if not sheet1.api.Rows(row).Hidden:  # Check if the row is visible\n",
-    "        sheet1.api.Rows(row).Copy()  # Copy the entire row\n",
-    "        sheet3.range(f'A{row_index}').paste()  # Paste it into Sheet3\n",
-    "        row_index += 1  # Move to the next row in Sheet3\n",
+    "# List of different sheet names for each workbook\n",
+    "different_sheet_names = ['DifferentSheet1', 'DifferentSheet2', 'DifferentSheet3', 'DifferentSheet4', 'DifferentSheet5']\n",
     "\n",
-    "# Clear the clipboard\n",
-    "xw.apps.active.api.CutCopyMode = False\n",
+    "# Create target directory if it doesn't exist\n",
+    "os.makedirs(target_directory, exist_ok=True)\n",
     "\n",
-    "# Save the workbook\n",
-    "wb.save()\n",
+    "# Copy source workbook to multiple workbooks\n",
+    "for i in range(15):\n",
+    "    # Create target workbook\n",
+    "    target_file = os.path.join(target_directory, f'workbook_{i+1}.xlsx')\n",
+    "    shutil.copy(source_file, target_file)\n",
     "\n",
-    "# Close the workbook\n",
-    "wb.close()\n"
+    "    # Load source and target workbooks\n",
+    "    source_wb = load_workbook(source_file)\n",
+    "    target_wb = load_workbook(target_file)\n",
+    "\n",
+    "    # Remove default 'Sheet' from target workbook\n",
+    "    default_sheet = target_wb['Sheet']\n",
+    "    target_wb.remove(default_sheet)\n",
+    "\n",
+    "    # Copy common sheets to target workbook\n",
+    "    copy_sheets(source_wb, target_wb, common_sheet_names)\n",
+    "\n",
+    "    # Copy different sheet to target workbook\n",
+    "    different_sheet_name = different_sheet_names[i % len(different_sheet_names)]\n",
+    "    copy_sheets(source_wb, target_wb, [different_sheet_name])\n",
+    "\n",
+    "    # Save target workbook\n",
+    "    target_wb.save(target_file)\n"
    ]
   },
   {
