--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -43,7 +43,38 @@
     "    target_wb = load_workbook(target_file)\n",
     "\n",
     "    # Remove default 'Sheet' from target workbook\n",
-    "    default_sheet = target_wb['Sheet']\n",
+    "    default_sheet = target_wa\n",
+    "    from openpyxl import load_workbook\n",
+    "\n",
+    "# Function to delete listed sheets from the workbook\n",
+    "def delete_sheets(wb, sheet_names):\n",
+    "    for sheet_name in sheet_names:\n",
+    "        if sheet_name in wb.sheetnames:\n",
+    "            del wb[sheet_name]\n",
+    "\n",
+    "# Define source workbook and target directory\n",
+    "source_file = 'source_workbook.xlsx'\n",
+    "target_directory = 'target_directory'\n",
+    "\n",
+    "# List of sheets to be deleted\n",
+    "sheets_to_delete = ['Sheet6', 'Sheet7', 'Sheet8']\n",
+    "\n",
+    "# Create target directory if it doesn't exist\n",
+    "os.makedirs(target_directory, exist_ok=True)\n",
+    "\n",
+    "# Copy source workbook to target directory\n",
+    "shutil.copy(source_file, target_directory)\n",
+    "\n",
+    "# Load target workbook\n",
+    "target_file = os.path.join(target_directory, 'source_workbook.xlsx')\n",
+    "wb = load_workbook(target_file)\n",
+    "\n",
+    "# Delete specified sheets\n",
+    "delete_sheets(wb, sheets_to_delete)\n",
+    "\n",
+    "# Save the modified workbook\n",
+    "wb.save(target_file)\n",
+    "b['Sheet']\n",
     "    target_wb.remove(default_sheet)\n",
     "\n",
     "    # Copy common sheets to target workbook\n",
