--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -2,8 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "2d786a18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1: ['item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 2: ['item1', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 3: ['item1', 'item2', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 4: ['item1', 'item2', 'item3', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 5: ['item1', 'item2', 'item3', 'item4', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 6: ['item1', 'item2', 'item3', 'item4', 'item5', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 7: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 8: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 9: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item10', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 10: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item11', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 11: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item12', 'item13', 'item14', 'item15']\n",
+      "Iteration 12: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item13', 'item14', 'item15']\n",
+      "Iteration 13: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item14', 'item15']\n",
+      "Iteration 14: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item15']\n",
+      "Iteration 15: ['item1', 'item2', 'item3', 'item4', 'item5', 'item6', 'item7', 'item8', 'item9', 'item10', 'item11', 'item12', 'item13', 'item14']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import xlwings as xw\n",
+    "\n",
+    "# Folder containing Excel files\n",
+    "folder_path = \"your_folder_path\"\n",
+    "\n",
+    "# Initialize lists to store data from Actuals ($) and Actuals (#) sheets\n",
+    "combined_actuals_dollar = []\n",
+    "combined_actuals_hash = []\n",
+    "\n",
+    "# Create a new workbook to store the combined data\n",
+    "combined_wb = xw.Book()\n",
+    "\n",
+    "# Iterate over Excel files in the folder\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".xlsx\"):\n",
+    "        # Open the workbook\n",
+    "        wb = xw.Book(os.path.join(folder_path, filename))\n",
+    "        \n",
+    "        # Iterate over sheets in the workbook\n",
+    "        for sheet in wb.sheets:\n",
+    "            # Skip Actuals ($) and Actuals (#) sheets\n",
+    "            if sheet.name not in ['Actuals ($)', 'Actuals (#)']:\n",
+    "                # Copy data from the current sheet to the combined workbook\n",
+    "                combined_wb.sheets.add(sheet.name).range('A1').value = sheet.range('A1').expand().value\n",
+    "        \n",
+    "        # Read data from Actuals ($) sheet and append to the combined_actuals_dollar list\n",
+    "        actuals_dollar_sheet = wb.sheets['Actuals ($)']\n",
+    "        combined_actuals_dollar.append(actuals_dollar_sheet.range('A1').expand().value)\n",
+    "        \n",
+    "        # Read data from Actuals (#) sheet and append to the combined_actuals_hash list\n",
+    "        actuals_hash_sheet = wb.sheets['Actuals (#)']\n",
+    "        combined_actuals_hash.append(actuals_hash_sheet.range('A1').expand().value)\n",
+    "        \n",
+    "        # Close the workbook\n",
+    "        wb.close()\n",
+    "\n",
+    "# Combine data from Actuals ($) sheets into a single list\n",
+    "combined_actuals_dollar_data = [item for sublist in combined_actuals_dollar for item in sublist]\n",
+    "\n",
+    "# Combine data from Actuals (#) sheets into a single list\n",
+    "combined_actuals_hash_data = [item for sublist in combined_actuals_hash for item in sublist]\n",
+    "\n",
+    "# Write combined Actuals ($) data to a new sheet in the combined workbook\n",
+    "combined_wb.sheets.add('Combined Actuals Dollar').range('A1').value = combined_actuals_dollar_data\n",
+    "\n",
+    "# Write combined Actuals (#) data to a new sheet in the combined workbook\n",
+    "combined_wb.sheets.add('Combined Actuals Hash').range('A1').value = combined_actuals_hash_data\n",
+    "\n",
+    "# Save the combined workbook\n",
+    "combined_wb.save(os.path.join(folder_path, 'Combined_Output.xlsx'))\n",
+    "\n",
+    "# Close the combined workbook\n",
+    "combined_wb.close()\n",
+    "\n",
+    "print(\"Combined Excel files created successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ca308c9c",
+   "id": "db41079a",
    "metadata": {},
    "outputs": [],
    "source": [
