--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -2,6 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4e1b3b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import xlwings as xw\n",
+    "\n",
+    "# Path to the folder containing Excel files\n",
+    "folder_path = \"your_folder_path\"\n",
+    "\n",
+    "# Path to the workbook to which data will be appended\n",
+    "wb_path = \"path_to_your_workbook.xlsx\"\n",
+    "\n",
+    "# Open the workbook to which data will be appended\n",
+    "wb = xw.Book(wb_path)\n",
+    "\n",
+    "# Iterate through each Excel file in the folder\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".xlsx\"):\n",
+    "        # Open the Excel file\n",
+    "        excel_file_path = os.path.join(folder_path, filename)\n",
+    "        wb_excel = xw.Book(excel_file_path)\n",
+    "        \n",
+    "        # Check if the sheet \"A#\" exists in the Excel file\n",
+    "        if \"A#\" in wb_excel.sheets:\n",
+    "            # Get the sheet named \"A#\"\n",
+    "            sheet_a_hash = wb_excel.sheets[\"A#\"]\n",
+    "            \n",
+    "            # Copy data from \"A#\" sheet and append it to the last sheet of wb\n",
+    "            last_sheet = wb.sheets[-1]\n",
+    "            last_row = last_sheet.range(\"A\" + str(last_sheet.used_range.last_cell.row + 1))\n",
+    "            last_row.value = sheet_a_hash.range(\"A1\").expand().value\n",
+    "        \n",
+    "        # Close the Excel file\n",
+    "        wb_excel.close()\n",
+    "\n",
+    "# Save the modified workbook\n",
+    "wb.save()\n",
+    "wb.close()\n",
+    "\n",
+    "print(\"Data appended successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "2d786a18",
    "metadata": {},
