--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,6 +3,101 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b2f869d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "def format_workbook(wb_path):\n",
+    "    app = xw.App(visible=False)\n",
+    "    workbook = app.books.open(wb_path)\n",
+    "    \n",
+    "    # Iterate through each sheet in the workbook\n",
+    "    for sheet in workbook.sheets:\n",
+    "        # Iterate through each cell in the sheet\n",
+    "        for cell in sheet.cells:\n",
+    "            # Check if the cell contains a number\n",
+    "            if isinstance(cell.value, (int, float)):\n",
+    "                # Apply the number format\n",
+    "                cell.number_format = '0;(0)'\n",
+    "    \n",
+    "    # Save and close the workbook\n",
+    "    workbook.save()\n",
+    "    workbook.close()\n",
+    "    app.quit()\n",
+    "\n",
+    "# Replace 'your_workbook.xlsx' with the path to your Excel workbook\n",
+    "format_workbook('your_workbook.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "625b3482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sub CopyAndPasteData()\n",
+    "    Dim wbSource As Workbook\n",
+    "    Dim wbDestination As Workbook\n",
+    "    Dim wsSource As Worksheet\n",
+    "    Dim wsDestination As Worksheet\n",
+    "    Dim pathSource As String\n",
+    "    Dim pathDestination As String\n",
+    "    \n",
+    "    ' Get the paths from cells A4 and B4\n",
+    "    pathSource = Range(\"A4\").Value\n",
+    "    pathDestination = Range(\"B4\").Value\n",
+    "    \n",
+    "    ' Check if the paths are not empty\n",
+    "    If pathSource = \"\" Or pathDestination = \"\" Then\n",
+    "        MsgBox \"Please provide paths for both source and destination files.\"\n",
+    "        Exit Sub\n",
+    "    End If\n",
+    "    \n",
+    "    ' Open the source workbook\n",
+    "    On Error Resume Next\n",
+    "    Set wbSource = Workbooks.Open(pathSource)\n",
+    "    On Error GoTo 0\n",
+    "    If wbSource Is Nothing Then\n",
+    "        MsgBox \"Unable to open the source workbook. Please check the path and try again.\"\n",
+    "        Exit Sub\n",
+    "    End If\n",
+    "    \n",
+    "    ' Set the source worksheet (assuming it's the first sheet)\n",
+    "    Set wsSource = wbSource.Sheets(1)\n",
+    "    \n",
+    "    ' Open the destination workbook\n",
+    "    On Error Resume Next\n",
+    "    Set wbDestination = Workbooks.Open(pathDestination)\n",
+    "    On Error GoTo 0\n",
+    "    If wbDestination Is Nothing Then\n",
+    "        MsgBox \"Unable to open the destination workbook. Please check the path and try again.\"\n",
+    "        wbSource.Close False\n",
+    "        Exit Sub\n",
+    "    End If\n",
+    "    \n",
+    "    ' Set the destination worksheet (assuming it's the first sheet)\n",
+    "    Set wsDestination = wbDestination.Sheets(1)\n",
+    "    \n",
+    "    ' Copy data from source to destination\n",
+    "    wsSource.UsedRange.Copy wsDestination.Range(\"A1\")\n",
+    "    \n",
+    "    ' Save the destination workbook\n",
+    "    wbDestination.Save\n",
+    "    \n",
+    "    ' Close workbooks\n",
+    "    wbSource.Close False\n",
+    "    wbDestination.Close True\n",
+    "    \n",
+    "    MsgBox \"Data copied successfully and destination file saved with updated values.\"\n",
+    "End Sub\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4e1b3b03",
    "metadata": {},
    "outputs": [],
@@ -20,7 +115,7 @@
     "wb = xw.Book(wb_path)\n",
     "\n",
     "# Iterate through each Excel file in the folder\n",
-    "for filename in os.listdir(folder_path):\n",
+    "for filename in os.listdir(folder_path):a\n",
     "    if filename.endswith(\".xlsx\"):\n",
     "        # Open the Excel file\n",
     "        excel_file_path = os.path.join(folder_path, filename)\n",
