--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,6 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b6ca48a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "# Open the workbook\n",
+    "wb = xw.Book('path_to_your_workbook.xlsx')\n",
+    "ws = wb.sheets[0]  # Assuming you want to work with the first worksheet\n",
+    "\n",
+    "# Get the last row of data in column A\n",
+    "last_row = ws.range('A' + str(ws.cells.last_cell.row)).end('up').row\n",
+    "\n",
+    "# Concatenate values from columns A, B, and C with a single space in between\n",
+    "for i in range(1, last_row + 1):\n",
+    "    concatenated_value = f\"{ws.cells(i, 'A').value} {ws.cells(i, 'B').value} {ws.cells(i, 'C').value}\"\n",
+    "    ws.cells(i, 'D').value = concatenated_value\n",
+    "\n",
+    "# Save and close the workbook\n",
+    "wb.save()\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b2f869d1",
    "metadata": {},
    "outputs": [],
