--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,27 +3,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6ca48a6",
+   "id": "06988fc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xlwings as xw\n",
     "\n",
-    "# Open the workbook\n",
-    "wb = xw.Book('path_to_your_workbook.xlsx')\n",
-    "ws = wb.sheets[0]  # Assuming you want to work with the first worksheet\n",
+    "# Open the current workbook\n",
+    "wb_current = xw.Book('current_workbook.xlsx')\n",
+    "ws_current = wb_current.sheets[0]  # Assuming you want to work with the first worksheet\n",
     "\n",
-    "# Get the last row of data in column A\n",
-    "last_row = ws.range('A' + str(ws.cells.last_cell.row)).end('up').row\n",
+    "# Open the new workbook\n",
+    "wb_new = xw.Book('new_workbook.xlsx')\n",
+    "ws_new = wb_new.sheets[0]  # Assuming you want to work with the first worksheet\n",
     "\n",
-    "# Concatenate values from columns A, B, and C with a single space in between\n",
-    "for i in range(1, last_row + 1):\n",
-    "    concatenated_value = f\"{ws.cells(i, 'A').value} {ws.cells(i, 'B').value} {ws.cells(i, 'C').value}\"\n",
-    "    ws.cells(i, 'D').value = concatenated_value\n",
+    "# Get the last row of data in column D of the current workbook\n",
+    "last_row_current = ws_current.range('D' + str(ws_current.cells.last_cell.row)).end('up').row\n",
     "\n",
-    "# Save and close the workbook\n",
-    "wb.save()\n",
-    "wb.close()\n"
+    "# Iterate over each row in column D of the current workbook\n",
+    "for i in range(2, last_row_current + 1):  # Start from row 2 (assuming row 1 is header)\n",
+    "    # Get the common identifier from column D of the current workbook\n",
+    "    common_identifier = ws_current.cells(i, 'D').value\n",
+    "    # Use Excel's VLOOKUP function to find the matching value from column B of the new workbook\n",
+    "    matched_value = ws_new.range(f'B:B').api.VLookup(common_identifier, ws_new.range('A:B').api, 2, False)\n",
+    "    # Write the matched value to column E of the current workbook\n",
+    "    ws_current.cells(i, 'E').value = matched_value\n",
+    "\n",
+    "# Save and close both workbooks\n",
+    "wb_current.save()\n",
+    "wb_current.close()\n",
+    "wb_new.close()\n"
    ]
   },
   {
