--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06988fc1",
+   "id": "bc6dbc8c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import xlwings as xw\n",
     "\n",
     "# Open the current workbook\n",
@@ -17,17 +18,18 @@
     "wb_new = xw.Book('new_workbook.xlsx')\n",
     "ws_new = wb_new.sheets[0]  # Assuming you want to work with the first worksheet\n",
     "\n",
-    "# Get the last row of data in column D of the current workbook\n",
-    "last_row_current = ws_current.range('D' + str(ws_current.cells.last_cell.row)).end('up').row\n",
+    "# Load data from the current workbook into a DataFrame\n",
+    "current_df = ws_current.range('A1').options(pd.DataFrame, index=False, header=True, expand='table').value\n",
     "\n",
-    "# Iterate over each row in column D of the current workbook\n",
-    "for i in range(2, last_row_current + 1):  # Start from row 2 (assuming row 1 is header)\n",
-    "    # Get the common identifier from column D of the current workbook\n",
-    "    common_identifier = ws_current.cells(i, 'D').value\n",
-    "    # Use Excel's VLOOKUP function to find the matching value from column B of the new workbook\n",
-    "    matched_value = ws_new.range(f'B:B').api.VLookup(common_identifier, ws_new.range('A:B').api, 2, False)\n",
-    "    # Write the matched value to column E of the current workbook\n",
-    "    ws_current.cells(i, 'E').value = matched_value\n",
+    "# Load data from the new workbook into a DataFrame\n",
+    "new_df = ws_new.range('A1').options(pd.DataFrame, index=False, header=True, expand='table').value\n",
+    "\n",
+    "# Merge the DataFrames based on the common column D in the current workbook and A in the new workbook\n",
+    "merged_df = pd.merge(current_df, new_df, how='left', left_on='D', right_on='A')\n",
+    "\n",
+    "# Fetch the values from column B of the new workbook and place them in column E of the current workbook\n",
+    "ws_current.range('E1').value = 'SPOC'  # Set the header of the new column\n",
+    "ws_current.range('E2').options(index=False, header=False).value = merged_df['B'].values\n",
     "\n",
     "# Save and close both workbooks\n",
     "wb_current.save()\n",
