--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6dbc8c",
+   "id": "fd468833",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +22,14 @@
     "current_df = ws_current.range('A1').options(pd.DataFrame, index=False, header=True, expand='table').value\n",
     "\n",
     "# Load data from the new workbook into a DataFrame\n",
-    "new_df = ws_new.range('A1').options(pd.DataFrame, index=False, header=True, expand='table').value\n",
+    "new_df = ws_new.range('A1').options(pd.DataFrame, index=True, header=True, expand='table').value\n",
     "\n",
-    "# Merge the DataFrames based on the common column D in the current workbook and A in the new workbook\n",
-    "merged_df = pd.merge(current_df, new_df, how='left', left_on='D', right_on='A')\n",
+    "# Validate merge key data types\n",
+    "if current_df['D'].dtype != new_df.index.dtype:\n",
+    "    current_df['D'] = current_df['D'].astype(str)\n",
+    "\n",
+    "# Merge the DataFrames based on the common column D in the current workbook and the index in the new workbook\n",
+    "merged_df = pd.merge(current_df, new_df, how='left', left_on='D', right_index=True)\n",
     "\n",
     "# Fetch the values from column B of the new workbook and place them in column E of the current workbook\n",
     "ws_current.range('E1').value = 'SPOC'  # Set the header of the new column\n",
