--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd468833",
+   "id": "d5ab0dd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,16 @@
     "new_df = ws_new.range('A1').options(pd.DataFrame, index=True, header=True, expand='table').value\n",
     "\n",
     "# Validate merge key data types\n",
-    "if current_df['D'].dtype != new_df.index.dtype:\n",
-    "    current_df['D'] = current_df['D'].astype(str)\n",
+    "if current_df['empname'].dtype != new_df.index.dtype:\n",
+    "    current_df['empname'] = current_df['empname'].astype(str)\n",
     "\n",
-    "# Merge the DataFrames based on the common column D in the current workbook and the index in the new workbook\n",
-    "merged_df = pd.merge(current_df, new_df, how='left', left_on='D', right_index=True)\n",
+    "# Merge the DataFrames based on the common column 'empname' in the current workbook and the index in the new workbook\n",
+    "merged_df = pd.merge(current_df, new_df, how='left', left_on='empname', right_index=True)\n",
     "\n",
-    "# Fetch the values from column B of the new workbook and place them in column E of the current workbook\n",
-    "ws_current.range('E1').value = 'SPOC'  # Set the header of the new column\n",
+    "# Set the header of the new column\n",
+    "ws_current.range('E1').value = 'SPOC'\n",
+    "\n",
+    "# Paste values from column 'B' of the merged DataFrame into column 'E' of the current workbook\n",
     "ws_current.range('E2').options(index=False, header=False).value = merged_df['B'].values\n",
     "\n",
     "# Save and close both workbooks\n",
