--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,44 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5ab0dd3",
+   "id": "20f52fad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import xlwings as xw\n",
     "\n",
     "# Open the current workbook\n",
     "wb_current = xw.Book('current_workbook.xlsx')\n",
     "ws_current = wb_current.sheets[0]  # Assuming you want to work with the first worksheet\n",
     "\n",
-    "# Open the new workbook\n",
-    "wb_new = xw.Book('new_workbook.xlsx')\n",
-    "ws_new = wb_new.sheets[0]  # Assuming you want to work with the first worksheet\n",
-    "\n",
-    "# Load data from the current workbook into a DataFrame\n",
-    "current_df = ws_current.range('A1').options(pd.DataFrame, index=False, header=True, expand='table').value\n",
-    "\n",
-    "# Load data from the new workbook into a DataFrame\n",
-    "new_df = ws_new.range('A1').options(pd.DataFrame, index=True, header=True, expand='table').value\n",
-    "\n",
-    "# Validate merge key data types\n",
-    "if current_df['empname'].dtype != new_df.index.dtype:\n",
-    "    current_df['empname'] = current_df['empname'].astype(str)\n",
-    "\n",
-    "# Merge the DataFrames based on the common column 'empname' in the current workbook and the index in the new workbook\n",
-    "merged_df = pd.merge(current_df, new_df, how='left', left_on='empname', right_index=True)\n",
-    "\n",
     "# Set the header of the new column\n",
     "ws_current.range('E1').value = 'SPOC'\n",
     "\n",
-    "# Paste values from column 'B' of the merged DataFrame into column 'E' of the current workbook\n",
-    "ws_current.range('E2').options(index=False, header=False).value = merged_df['B'].values\n",
+    "# Write the VLOOKUP formula in column 'E' of the current workbook\n",
+    "last_row = ws_current.range('D' + str(ws_current.cells.last_cell.row)).end('up').row\n",
+    "lookup_range = ws_current.range('D2:D' + str(last_row))\n",
+    "lookup_formula = f'=VLOOKUP(D2, [new_workbook.xlsx]Sheet1!$A:$B, 2, FALSE)'\n",
+    "ws_current.range('E2').options(expand='down').formula = lookup_formula\n",
     "\n",
-    "# Save and close both workbooks\n",
+    "# Save and close the current workbook\n",
     "wb_current.save()\n",
-    "wb_current.close()\n",
-    "wb_new.close()\n"
+    "wb_current.close()\n"
    ]
   },
   {
