--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,6 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ec86c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "# Open the workbook\n",
+    "wb = xw.Book('path_to_your_workbook.xlsx')\n",
+    "\n",
+    "# Access the sheets\n",
+    "sheet1 = wb.sheets['Sheet1']\n",
+    "sheet2 = wb.sheets['Sheet2']\n",
+    "\n",
+    "# Copy data from Sheet2 to a new sheet\n",
+    "new_sheet = wb.sheets.add(name='TempSheet')\n",
+    "new_sheet.range('A1').value = sheet2.range('A1').expand().value\n",
+    "\n",
+    "# Update references in Sheet1 to point to the new sheet before deleting Sheet2\n",
+    "for formula_cell in sheet1.used_range:\n",
+    "    if formula_cell.formula and 'Sheet2!' in formula_cell.formula:\n",
+    "        formula_cell.formula = formula_cell.formula.replace('Sheet2!', 'TempSheet!')\n",
+    "\n",
+    "# Delete the original Sheet2\n",
+    "sheet2.delete()\n",
+    "\n",
+    "# Rename the new sheet to Sheet2\n",
+    "new_sheet.name = 'Sheet2'\n",
+    "\n",
+    "# Update references in Sheet1 to point to the newly renamed Sheet2\n",
+    "for formula_cell in sheet1.used_range:\n",
+    "    if formula_cell.formula and 'TempSheet!' in formula_cell.formula:\n",
+    "        formula_cell.formula = formula_cell.formula.replace('TempSheet!', 'Sheet2!')\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save()\n",
+    "\n",
+    "# Optionally close the workbook\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "20f52fad",
    "metadata": {},
    "outputs": [],
