--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ec86c83",
+   "id": "b1f11679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "# Open the workbook\n",
+    "wb = xw.Book('path_to_your_workbook.xlsx')\n",
+    "\n",
+    "# Access the sheets\n",
+    "sheet2 = wb.sheets['Sheet2']\n",
+    "\n",
+    "# Define the range of the data (excluding the header row)\n",
+    "data_range = sheet2.range('A2').expand()\n",
+    "\n",
+    "# Copy the data (excluding the header row)\n",
+    "data = data_range.value\n",
+    "\n",
+    "# Clear all data except the header row in Sheet2\n",
+    "data_range.clear_contents()\n",
+    "\n",
+    "# Paste the copied data back into Sheet2\n",
+    "sheet2.range('A2').value = data\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save()\n",
+    "\n",
+    "# Optionally close the workbook\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2943211c",
    "metadata": {},
    "outputs": [],
    "source": [
