--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,8 +2,256 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f3ecbc90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the Excel file\n",
+    "file_path = 'your_excel_file.xlsx'  # Replace with your file path\n",
+    "excel_data = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Create a dictionary to hold the processed data for each sheet\n",
+    "grouped_data = {}\n",
+    "\n",
+    "for sheet_name in excel_data.sheet_names:\n",
+    "    # Read each sheet into a DataFrame\n",
+    "    df = pd.read_excel(excel_data, sheet_name=sheet_name)\n",
+    "\n",
+    "    # Group the data by 'L3' and 'Role'\n",
+    "    grouped = df.groupby(['L3', 'Role'])\n",
+    "\n",
+    "    # Count the occurrences of 'High' and 'Low' in the 'High/Low' column\n",
+    "    result = grouped['High/Low'].value_counts().unstack(fill_value=0)\n",
+    "\n",
+    "    # Save the result in the dictionary\n",
+    "    grouped_data[sheet_name] = result\n",
+    "\n",
+    "# Create a new Excel writer object\n",
+    "output_file_path = 'grouped_data.xlsx'  # Replace with your desired output file path\n",
+    "writer = pd.ExcelWriter(output_file_path, engine='openpyxl')\n",
+    "\n",
+    "# Write each sheet's data to the new Excel file\n",
+    "for sheet_name, data in grouped_data.items():\n",
+    "    data.to_excel(writer, sheet_name=sheet_name)\n",
+    "\n",
+    "# Save the Excel file\n",
+    "writer.save()\n",
+    "\n",
+    "print(f\"Grouped data has been saved to {output_file_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d19c99f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  colA  colB colS\n",
+      "0    1    10  NaN\n",
+      "1    2    20  NaN\n",
+      "2    3    30    a\n",
+      "3    4    40    b\n",
+      "4    7    50    c\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data for df1 with 30 columns (only a few shown here for simplicity)\n",
+    "data1 = {\n",
+    "    'colA': [1, 2, 3, 4, 7],\n",
+    "    'colB': [10, 20, 30, 40, 50],\n",
+    "    'colS': [None, None, None, None, None]  # Initially None or some default value\n",
+    "    # Add other columns as needed\n",
+    "}\n",
+    "df1 = pd.DataFrame(data1)\n",
+    "\n",
+    "# Sample data for df2 with 45 columns (only a few shown here for simplicity)\n",
+    "data2 = {\n",
+    "    'colR': [3, 3, 4, 5, 6, 6],\n",
+    "    'colS': ['a', 'b', 'c', 'd', 'e', 'f'],\n",
+    "    'colPM': [7, 8, 9, 10, 11, 12]\n",
+    "    # Add other columns as needed\n",
+    "}\n",
+    "df2 = pd.DataFrame(data2)\n",
+    "\n",
+    "# Ensure the data types of colA, colR, and colPM are the same\n",
+    "df1['colA'] = df1['colA'].astype(str)\n",
+    "df2['colR'] = df2['colR'].astype(str)\n",
+    "df2['colPM'] = df2['colPM'].astype(str)\n",
+    "\n",
+    "# Initial merge using colA and colR\n",
+    "df_merged_initial = pd.merge(df1, df2[['colR', 'colS']], left_on='colA', right_on='colR', how='left')\n",
+    "\n",
+    "# Update df1's colS with the values from initial merge\n",
+    "df1['colS'] = df_merged_initial['colS_y']\n",
+    "\n",
+    "# Identify rows where colS is still NaN\n",
+    "mask = df1['colS'].isna()\n",
+    "\n",
+    "# Perform the second merge using colA and colPM for the NaN rows\n",
+    "df_merged_second = pd.merge(df1[mask], df2[['colPM', 'colS']], left_on='colA', right_on='colPM', how='left')\n",
+    "\n",
+    "# Update colS in df1 for the NaN rows with values from the second merge\n",
+    "df1.loc[mask, 'colS'] = df_merged_second['colS_y']\n",
+    "\n",
+    "print(df1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b5784398",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  colA  colB colS\n",
+      "0    1    10  NaN\n",
+      "1    2    20  NaN\n",
+      "2    3    30    a\n",
+      "3    4    40    b\n",
+      "4    7    50    c\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data for df1 with 30 columns (only a few shown here for simplicity)\n",
+    "data1 = {\n",
+    "    'colA': [1, 2, 3, 4, 7],\n",
+    "    'colB': [10, 20, 30, 40, 50],\n",
+    "    'colS': [None, '', ' ', '   ', '']  # Different types of empty or blank values\n",
+    "    # Add other columns as needed\n",
+    "}\n",
+    "df1 = pd.DataFrame(data1)\n",
+    "\n",
+    "# Sample data for df2 with 45 columns (only a few shown here for simplicity)\n",
+    "data2 = {\n",
+    "    'colR': [3, 3, 4, 5, 6, 6],\n",
+    "    'colS': ['a', 'b', 'c', 'd', 'e', 'f'],\n",
+    "    'colPM': [7, 8, 9, 10, 11, 12]\n",
+    "    # Add other columns as needed\n",
+    "}\n",
+    "df2 = pd.DataFrame(data2)\n",
+    "\n",
+    "# Ensure the data types of colA, colR, and colPM are the same\n",
+    "df1['colA'] = df1['colA'].astype(str)\n",
+    "df2['colR'] = df2['colR'].astype(str)\n",
+    "df2['colPM'] = df2['colPM'].astype(str)\n",
+    "\n",
+    "# Initial merge using colA and colR\n",
+    "df_merged_initial = pd.merge(df1, df2[['colR', 'colS']], left_on='colA', right_on='colR', how='left')\n",
+    "\n",
+    "# Update df1's colS with the values from initial merge\n",
+    "df1['colS'] = df_merged_initial['colS_y']\n",
+    "\n",
+    "# Identify rows where colS is empty or blank\n",
+    "mask = df1['colS'].apply(lambda x: x == '' or x.isspace() if isinstance(x, str) else False)\n",
+    "\n",
+    "# Perform the second merge using colA and colPM for the empty or blank rows\n",
+    "df_merged_second = pd.merge(df1[mask], df2[['colPM', 'colS']], left_on='colA', right_on='colPM', how='left')\n",
+    "\n",
+    "# Update colS in df1 for the empty or blank rows with values from the second merge\n",
+    "df1.loc[mask, 'colS'] = df_merged_second['colS_y']\n",
+    "\n",
+    "print(df1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b44b6bfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>colA</th>\n",
+       "      <th>colB</th>\n",
+       "      <th>colS_x</th>\n",
+       "      <th>colPM</th>\n",
+       "      <th>colS_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  colA  colB colS_x colPM colS_y\n",
+       "0    1    10    NaN   NaN    NaN\n",
+       "1    2    20    NaN   NaN    NaN\n",
+       "2    7    50    NaN     7      a"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merged_pm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "4ef177e3",
+   "id": "8b765483",
    "metadata": {},
    "outputs": [
     {
