--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3ecbc90",
+   "id": "af50811c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,27 +20,29 @@
     "    # Read each sheet into a DataFrame\n",
     "    df = pd.read_excel(excel_data, sheet_name=sheet_name)\n",
     "\n",
-    "    # Group the data by 'L3' and 'Role'\n",
-    "    grouped = df.groupby(['L3', 'Role'])\n",
+    "    # Group the data by 'Mapped L3' and 'Role_temp'\n",
+    "    grouped = df.groupby(['Mapped L3', 'Role_temp'])\n",
     "\n",
     "    # Count the occurrences of 'High' and 'Low' in the 'High/Low' column\n",
     "    result = grouped['High/Low'].value_counts().unstack(fill_value=0)\n",
+    "\n",
+    "    # Add totals for each row ('Mapped L3', 'Role_temp')\n",
+    "    result['Total'] = result.sum(axis=1)\n",
+    "\n",
+    "    # Add a totals row\n",
+    "    total_row = result.sum(axis=0).to_frame().T\n",
+    "    total_row.index = ['Total']\n",
+    "    result = pd.concat([result, total_row])\n",
     "\n",
     "    # Save the result in the dictionary\n",
     "    grouped_data[sheet_name] = result\n",
     "\n",
     "# Create a new Excel writer object\n",
-    "output_file_path = 'grouped_data.xlsx'  # Replace with your desired output file path\n",
+    "output_file_path = 'grouped_data_with_totals.xlsx'  # Replace with your desired output file path\n",
     "writer = pd.ExcelWriter(output_file_path, engine='openpyxl')\n",
     "\n",
     "# Write each sheet's data to the new Excel file\n",
-    "for sheet_name, data in grouped_data.items():\n",
-    "    data.to_excel(writer, sheet_name=sheet_name)\n",
-    "\n",
-    "# Save the Excel file\n",
-    "writer.save()\n",
-    "\n",
-    "print(f\"Grouped data has been saved to {output_file_path}\")\n"
+    "for\n"
    ]
   },
   {
